--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,12 @@ import SideBar from "../components/SideBar.astro";
 
 import { SITE_TITLE, SITE_DESCRIPTION } from "../config";
 
-const { image, title = SITE_TITLE, description = SITE_DESCRIPTION, includeSidebar = true } = Astro.props;
+const {
+  image,
+  title = SITE_TITLE,
+  description = SITE_DESCRIPTION,
+  includeSidebar = true,
+} = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -14,13 +19,13 @@ const { image, title = SITE_TITLE, description = SITE_DESCRIPTION, includeSideba
   <head>
     <BaseHead title={title} description={description} image={image} />
   </head>
-  <body>
-    <div class="bg-base-100 drawer drawer-mobile">
+  <body class="bg-base-100">
+    <div class="drawer-mobile drawer dark:text-white">
       <input id="my-drawer" type="checkbox" class="drawer-toggle" />
-      <div class="drawer-content flex flex-col bg-base-100">
+      <div class="drawer-content flex flex-col">
         <Header title={SITE_TITLE} />
-        <div class="md:flex md:justify-center">
-          <main class="p-6 pt-10 max-w-[900px]">
+        <div class="flex flex-auto">
+          <main class="flex flex-auto flex-col p-6 pt-10">
             <slot />
           </main>
         </div>
