--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,14 +4,18 @@ const today = new Date();
 
 <footer class="footer footer-center block mb-5 pt-10">
   <div class="pb-2">
-    &copy; {today.getFullYear()} Manuel Ernesto
+    &copy; {today.getFullYear()} Yoannis Sánchez Soto
   </div>
-  <div class="inline opacity-75">
+  <div class="inline opacity-75 text-gray-400 text-xs">
     <!-- Thanks for using this template. Please keep this line to support my work :) -->
-    <a href="https://astro-modern-personal-website.netlify.app/" target="_blank" class="font-bold">Website Template</a> developed by
-    <a href="https://manuelernestog.github.io" target="_blank" class="font-bold">Manuel Ernesto ⚡️</a>
+    <a
+      href="https://astro-modern-personal-website.netlify.app/"
+      target="_blank"
+      class="font-bold">Website Template</a
+    > developed by
+    <a href="https://manuelernestog.github.io" target="_blank" class="font-bold"
+      >Manuel Ernesto ⚡️</a
+    >
   </div>
 </footer>
-<style>
-
-</style>
+<style></style>
