--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -4,7 +4,7 @@ import { Image } from "@astrojs/image/components";
 ---
 
 <div
-  class="rounded-lg bg-base-100 hover:shadow-xl transition ease-in-out hover:scale-[102%]"
+  class="rounded-3xl bg-base-200 p-1 transition ease-in-out hover:scale-[102%] hover:shadow-xl"
 >
   <a href={url} target={target}>
     <div class="hero-content flex-col md:flex-row">
@@ -16,20 +16,20 @@ import { Image } from "@astrojs/image/components";
             width={750}
             format="webp"
             alt={title}
-            class="max-w-full md:max-w-[13rem] rounded-lg"
+            class="max-w-full rounded-xl md:max-w-[13rem]"
           />
         )
       }
-      <div class="grow w-full">
+      <div class="w-full grow">
         <h1 class="text-xl font-bold">
           {title}
-          {badge && <div class="badge badge-secondary mx-2">{badge}</div>}
+          {badge && <div class="badge-primary badge mx-2">{badge}</div>}
         </h1>
-        <p class="py-1 text-1xl">{desc}</p>
+        <p class="text-1xl py-1">{desc}</p>
         <div class="card-actions justify-end">
           {
             tags &&
-              tags.map((tag) => <div class="badge badge-outline">{tag}</div>)
+              tags.map((tag) => <div class="badge-outline badge">{tag}</div>)
           }
         </div>
       </div>
