--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -15,24 +15,26 @@ import { Image } from "@astrojs/image/components";
 
 <BaseLayout title={title} description={description} image={heroImage}>
   <main class="md:flex md:justify-center">
-    <article class="prose prose-lg max-w-[750px] prose-img:mx-auto">
+    <article
+      class="prose-lg prose max-w-[750px] prose-img:mx-auto dark:text-gray-400"
+    >
       {
         heroImage && (
-        <Image
+          <Image
             aspectRatio={"16:9"}
             width={750}
             height={422}
             format="webp"
             src={heroImage}
             alt={title}
-            class="w-full mb-6"
+            class="mb-6 w-full"
           />
         )
       }
-      <h1 class="title my-2 text-4xl font-bold">{title}</h1>
+      <h1 class="title my-2 text-4xl font-bold dark:text-white">{title}</h1>
       {pubDate && <time>{displayDate}</time>}
       <br />
-      {badge && <div class="badge badge-secondary my-1">{badge}</div>}
+      {badge && <div class="badge-primary badge my-1">{badge}</div>}
       {
         updatedDate && (
           <div>
