--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,10 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
-import HorizontalCard from "../components/HorizontalCard.astro";
+import { Image } from "@astrojs/image/components";
 import { getCollection } from "astro:content";
+import HorizontalCard from "../components/HorizontalCard.astro";
+import BaseLayout from "../layouts/BaseLayout.astro";
 
-const posts = (await getCollection('blog')).sort(
+const posts = (await getCollection("blog")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
 
@@ -11,67 +12,144 @@ const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout>
+  <div class="flex flex-auto p-2 lg:p-6">
+    <div
+      class="bg flex flex-auto flex-col rounded-2xl bg-gradient-to-br from-primary to-secondary p-12 shadow-2xl shadow-primary/40 dark:shadow-primary/10 lg:flex-row"
+    >
+      <div class="flex flex-auto flex-col">
+        <div class="mx-auto my-auto w-fit lg:ml-auto lg:w-96">
+          <h1
+            class="mt-2 whitespace-nowrap text-justify text-3xl font-bold text-white lg:mt-0 lg:text-7xl"
+          >
+            El <br class="hidden lg:block" /> Blog <br
+              class="hidden lg:block"
+            />
+          </h1>
 
-    <div class="pb-12 mt-5">
-      <div class="text-xl py-1">Hey there 👋</div>
-      <div class="text-5xl font-bold">I'm Manuel Ernesto</div>
-      <div class="text-3xl py-3 font-bold">Software Engineer and Entrepreneur</div>
-      <div class="py-2">
-        <text class="text-lg">
-          I made this template for everyone who needs to create a personal website easily and quickly. This template includes Project Section, CV Section, Store, Paginated Blog, RSS Feed, SEO Friendly, Responsive Design and 29 Visual themes. I hope you find it useful!
-          </text
+          <p
+            class="text-justify text-3xl font-bold text-white lg:mt-0 lg:text-7xl"
+          >
+            de YOSS
+          </p>
+
+          <p
+            class="mt-4 text-center text-xl text-gray-200 lg:text-justify lg:text-xl"
+          >
+            Frontend and Software Developer
+          </p>
+        </div>
+      </div>
+      <div class="flex flex-auto flex-col">
+        <div
+          class="mx-auto my-auto rounded-full bg-white p-8 shadow-2xl lg:p-14"
         >
+          <Image
+            class="rounded-full shadow-xl shadow-primary"
+            aspectRatio="1:1"
+            format="webp"
+            width={300}
+            height={300}
+            src="/profile2.png"
+            alt="Profile image"
+          />
+        </div>
       </div>
-      <div class="mt-8">
-        <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
-        <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a>
-      </div>
     </div>
+  </div>
 
-    <div>
-      <div class="text-3xl w-full font-bold mb-2">My last projects {"</>"}</div>
-    </div>
+  <div class="flex flex-auto flex-col gap-8 lg:flex-row">
+    <div class="flex flex-col gap-2">
+      <div class="ml-auto">
+        <div class="mb-6 mt-4 flex w-full gap-2 font-bold text-gray-500">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-code-circle my-auto"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path d="M10 14l-2 -2l2 -2"></path>
+            <path d="M14 10l2 2l-2 2"></path>
+            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+          </svg>
+          <p class="text-xl">Mis últimos proyectos</p>
+        </div>
 
-    <HorizontalCard
-      title="Demo Project 1"
-      img="/post_img.webp"
-      desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-      url="#"
-      badge="NEW"
-    />
-    <div class="divider my-0"></div>
-    <HorizontalCard
-    title="Demo Project 2"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-  />
-    <div class="divider my-0"></div>
-    <HorizontalCard
-    title="Demo Project 3"
-    img="/post_img.webp"
-    desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-    url="#"
-    badge="FOSS"
-  />
-
-
-    <div>
-      <div class="text-3xl w-full font-bold mb-5 mt-10">Latest from blog</div>
-    </div>
-
-    {
-      last_posts.map((post) => (
         <HorizontalCard
-          title={post.data.title}
-          img={post.data.heroImage}
-          desc={post.data.description}
-          url={"/blog/" + post.slug}
-          target="_self"
-          badge={post.data.badge}
+          title="Demo Project 1"
+          img="/post_img.webp"
+          desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+          url="#"
+          badge="NEW"
         />
-        <div class="divider my-0"></div>
-      ))
-    }
+        <div class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1"></div>
+        <HorizontalCard
+          title="Demo Project 2"
+          img="/post_img.webp"
+          desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+          url="#"
+        />
+      </div>
 
+      <div class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1"></div>
+      <HorizontalCard
+        title="Demo Project 3"
+        img="/post_img.webp"
+        desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+        url="#"
+        badge="FOSS"
+      />
+    </div>
+
+    <div class="flex flex-col gap-2">
+      <div class="ml-auto">
+        <div class="mb-6 mt-4 flex w-full gap-2 font-bold text-gray-500">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="icon icon-tabler icon-tabler-article my-auto"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            stroke-width="2"
+            stroke="currentColor"
+            fill="none"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+            <path
+              d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
+            ></path>
+            <path d="M7 8h10"></path>
+            <path d="M7 12h10"></path>
+            <path d="M7 16h10"></path>
+          </svg>
+          <p class="text-xl">Ùltimas Publicaciones</p>
+        </div>
+      </div>
+      {
+        last_posts.map((post, index) => (
+          <>
+            <HorizontalCard
+              title={post.data.title}
+              img={post.data.heroImage}
+              desc={post.data.description}
+              url={"/blog/" + post.slug}
+              target="_self"
+              badge={post.data.badge}
+            />
+            {index != last_posts.length - 1 && (
+              <div class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1" />
+            )}
+          </>
+        ))
+      }
+    </div>
+  </div>
 </BaseLayout>
