--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,55 @@
 .time-line-container>div:last-child .education__time>.education__line {
     display: none;
 }
+
+::-webkit-scrollbar {
+	width: 12px;
+}
+::-webkit-scrollbar-corner {
+	background: rgba(0, 0, 0, 0);
+}
+::-webkit-scrollbar-thumb {
+	background-color: #aa9a9a15;
+	border-radius: 12px;
+	border: 4px solid rgba(0, 0, 0, 0);
+	background-clip: content-box;
+	min-width: 12px;
+	min-height: 28px;
+}
+::-webkit-scrollbar-track {
+	background-color: rgba(0, 0, 0, 0);
+}
+
+img {
+	pointer-events: none;
+}
+
+@font-face {
+	font-family: 'Poppins-Font';
+	src: url('./fonts/Poppins-Regular.ttf') format('woff2'),
+		url('./fonts/Poppins-Regular.ttf') format('woff');
+	font-weight: bold;
+	font-style: bold;
+	font-display: swap;
+}
+
+@font-face {
+	font-family: 'Poppins-Font-Bold';
+	src: url('./fonts/Poppins-Bold.ttf') format('woff2'),
+		url('./fonts/Poppins-Bold.ttf') format('woff');
+	font-weight: bold;
+	font-style: bold;
+	font-display: swap;
+}
+
+body {
+	font-family: "Poppins-Font";
+}
+
+h1 {
+	font-family: "Poppins-Font-Bold";
+}
+
+.poppins-font{
+	font-family: "Poppins-Font";
+}
