--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -21,7 +21,7 @@ import { Image } from "@astrojs/image/components";
               format="webp"
               width={300}
               height={300}
-              src="/profile.png"
+              src="/profile2.png"
               alt="Profile image"
             />
           </div>
