--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -7,7 +7,7 @@ import { Image } from "@astrojs/image/components";
 >
   <label for="my-drawer" class="drawer-overlay bg-base-200/5"></label>
   <div
-    class="menu flex w-[20rem] cursor-default flex-col flex-nowrap overflow-y-auto bg-base-200 p-2 text-base-content lg:mx-6 lg:my-auto lg:h-fit lg:w-20 lg:rounded-3xl lg:bg-base-200 lg:shadow-xl"
+    class="menu flex w-[20rem] cursor-default flex-col flex-nowrap overflow-y-auto bg-base-200 p-2 text-gray-800 lg:my-4 lg:w-20 lg:bg-base-100"
   >
     <div class="flex w-fit">
       <a class="lg:hidden" href="/">
@@ -33,7 +33,7 @@ import { Image } from "@astrojs/image/components";
       <!-- Sidebar content here -->
       <div>
         <a
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-full lg:hover:scale-105"
+          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
           id="home"
           href="/"
         >
@@ -60,7 +60,7 @@ import { Image } from "@astrojs/image/components";
 
       <div>
         <a
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-full lg:hover:scale-105"
+          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
           id="projects"
           href="/projects"
         >
@@ -87,7 +87,7 @@ import { Image } from "@astrojs/image/components";
 
       <div>
         <a
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-full lg:hover:scale-105"
+          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
           id="blog"
           href="/blog"
         >
@@ -117,7 +117,7 @@ import { Image } from "@astrojs/image/components";
 
       <div>
         <a
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-full lg:hover:scale-105"
+          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
           id="cv"
           href="/cv"
         >
@@ -143,7 +143,7 @@ import { Image } from "@astrojs/image/components";
 
       <div>
         <a
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-full lg:hover:scale-105"
+          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
           href="mailto:contact.yossthedev@gmail.com"
         >
           <svg
@@ -169,7 +169,7 @@ import { Image } from "@astrojs/image/components";
       </div>
     </div>
 
-    <div class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1"></div>
+    <div class="mx-auto my-3 h-1 w-1 rounded-full bg-gray-600/10 p-1"></div>
 
     <div
       class="social-icons my-2 flex gap-2 self-center px-4 dark:text-gray-400 lg:flex-col lg:gap-8 lg:px-0"
@@ -177,14 +177,14 @@ import { Image } from "@astrojs/image/components";
       <a
         href="https://manuelernestog.github.io/support-my-work/"
         target="_blank"
-        class="mx-3"
+        class="mx-3 lg:mx-auto"
         aria-label="Support my work"
         title="Support my work"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="20"
+          height="20"
           viewBox="0 0 24 24"
           style="fill: currentColor;transform: ;msFilter:;"
           ><path
@@ -197,14 +197,14 @@ import { Image } from "@astrojs/image/components";
       <a
         href="https://github.com/manuelernestog"
         target="_blank"
-        class="mx-3"
+        class="mx-3 lg:mx-auto"
         aria-label="Github"
         title="Github"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="20"
+          height="20"
           viewBox="0 0 24 24"
           style="fill: currentColor;transform: ;msFilter:;"
           ><path
@@ -217,14 +217,14 @@ import { Image } from "@astrojs/image/components";
       <a
         href="https://twitter.com/manuelernestog"
         target="_blank"
-        class="mx-3"
+        class="mx-3 lg:mx-auto"
         aria-label="Twitter"
         title="Twitter"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="20"
+          height="20"
           viewBox="0 0 24 24"
           style="fill: currentColor;transform: ;msFilter:;"
           ><path
@@ -235,7 +235,7 @@ import { Image } from "@astrojs/image/components";
       <a
         href="https://www.linkedin.com/in/manuelernestogr"
         target="_blank"
-        class="mx-3"
+        class="mx-3 lg:mx-auto"
         aria-label="Linkedin"
         title="Linkedin"
       >
@@ -254,14 +254,14 @@ import { Image } from "@astrojs/image/components";
       <a
         href="/rss.xml"
         target="_blank"
-        class="mx-3"
+        class="mx-3 lg:mx-auto"
         aria-label="RSS Feed"
         title="RSS Feed"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          width="20"
+          height="20"
           viewBox="0 0 24 24"
           style="fill: currentColor;transform: ;msFilter:;"
           ><path
@@ -289,7 +289,7 @@ import { Image } from "@astrojs/image/components";
 
   const pages = [projectsLink, servicesLink, storeLink, blogLink, cvLink];
 
-  const activeClass = "bg-base-100"; // For primary color replace with `active` class
+  const activeClass = "bg-base-200"; // For primary color replace with `active` class
 
   pages.forEach((elem) => {
     if (elem?.id && url.includes(elem.id)) {
