--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,3 +53,22 @@ h1 {
 .poppins-font{
 	font-family: "Poppins-Font";
 }
+
+
+@keyframes gradient-bg {
+	0%{
+		background-position: 0% 50%;
+	}
+    50% {
+		background-position: 60% 70%;
+    }
+
+	0%{
+		background-position: 0% 50%;
+	}
+}
+.gradient {
+	background-image: linear-gradient(-45deg, #f1a533, #ff7139,#eb3e3e);
+	background-size: 300% 100%;
+    animation: gradient-bg 5s ease-in-out infinite;
+}
