--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,7 +6,7 @@ const today = new Date();
   <div class="pb-2">
     &copy; {today.getFullYear()} Yoannis Sánchez Soto
   </div>
-  <div class="inline opacity-75 text-gray-400 text-xs">
+  <div class="inline opacity-75 text-gray-400 lg:text-xs text-[10px]">
     <!-- Thanks for using this template. Please keep this line to support my work :) -->
     <a
       href="https://astro-modern-personal-website.netlify.app/"
