--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 24 24"
-          class="inline-block h-5 w-5 stroke-current dark:stroke-gray-200"
+          class="inline-block h-5 w-5 stroke-gray-200"
           ><path
             stroke-linecap="round"
             stroke-linejoin="round"
@@ -18,7 +18,7 @@
       </label>
     </div>
     <div class="navbar-center">
-      <p class="btn-ghost btn text-xl normal-case dark:text-gray-200">
+      <p class="poppins-bold btn-ghost btn text-xl normal-case text-gray-200">
         Y O S S
       </p>
     </div>
