--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -16,7 +16,7 @@ import { Image } from "@astrojs/image/components";
 <BaseLayout title={title} description={description} image={heroImage}>
   <main class="md:flex md:justify-center">
     <article
-      class="prose-lg prose max-w-[750px] prose-img:mx-auto dark:text-gray-400"
+      class="prose-lg prose max-w-[750px] prose-img:mx-auto text-gray-400"
     >
       {
         heroImage && (
@@ -27,11 +27,11 @@ import { Image } from "@astrojs/image/components";
             format="webp"
             src={heroImage}
             alt={title}
-            class="mb-6 w-full"
+            class="mb-6 w-full rounded-xl"
           />
         )
       }
-      <h1 class="title my-2 text-4xl font-bold dark:text-white">{title}</h1>
+      <h1 class="title my-2 text-4xl font-bold text-white">{title}</h1>
       {pubDate && <time>{displayDate}</time>}
       <br />
       {badge && <div class="badge-primary badge my-1">{badge}</div>}
