--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -13,7 +13,7 @@ import { Image } from "@astrojs/image/components";
 ---
 
 <div
-  class="rounded-3xl bg-base-200 p-1 transition ease-in-out hover:bg-neutral"
+  class="rounded-3xl bg-base-200 p-1 transition ease-in-out hover:bg-neutral portrait:hover:scale-95"
 >
   <a href={url} target={target}>
     <div
