--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,30 +7,28 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 const posts = (await getCollection("blog")).sort(
   (a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
 );
-
-const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout>
   <div class="flex flex-auto flex-col gap-10 p-2 lg:p-1">
     <!-- Hero Panel -->
     <div
-      class="gradient -skew-y-1 skew-x-1 rounded-3xl p-3 shadow-2xl shadow-primary/40 dark:shadow-primary/10"
+      class="gradient -skew-y-1 skew-x-1 rounded-3xl p-3 shadow-xl shadow-primary/10"
     >
       <div
-        class="flex max-h-[38rem] flex-auto select-none flex-col overflow-hidden rounded-3xl bg-base-200 bg-no-repeat p-12 shadow-2xl transition-all lg:flex-row"
+        class="flex max-h-[38rem] flex-auto select-none flex-col overflow-hidden rounded-3xl bg-base-200 bg-no-repeat p-8 shadow-2xl transition-all lg:flex-row lg:p-12"
       >
         <div class="order-2 flex flex-auto flex-col lg:order-1">
           <div class="mx-auto my-auto w-fit lg:ml-auto lg:w-96">
             <h1
-              class="mt-2 whitespace-nowrap text-center text-3xl font-bold dark:text-white lg:mt-0 lg:text-justify lg:text-7xl"
+              class="mt-2 whitespace-nowrap text-center text-3xl font-bold text-white lg:mt-0 lg:text-justify lg:text-7xl"
             >
               Yoannis <br class="" /> Sánchez <br class="" />
               Soto
             </h1>
 
             <p
-              class="mt-4 text-center text-xl text-gray-400 dark:text-gray-200 lg:text-justify lg:text-xl"
+              class="mt-4 text-center text-xl text-gray-200 lg:text-justify lg:text-xl"
             >
               Frontend and Software Developer
             </p>
@@ -56,9 +54,9 @@ const last_posts = posts.slice(0, 3);
     </div>
 
     <!-- Latest Projects -->
-    <div class="flex flex-auto flex-col gap-8 lg:flex-col">
+    <div class="flex flex-auto flex-col gap-8 lg:flex-col select-none">
       <div class="flex flex-col gap-2">
-        <div class="mx-auto">
+        <div class="mx-auto w-full">
           <div
             class="mx-auto mb-6 mt-6 flex w-fit gap-2 font-bold text-gray-500"
           >
@@ -83,29 +81,20 @@ const last_posts = posts.slice(0, 3);
           </div>
 
           <HorizontalCard
-            title="Demo Project 1"
-            img="/post_img.webp"
-            desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+            title="Karbonized"
+            img="/projects/karbonized.png"
+            desc="Generador de imágenes de fragmentos de codigo o screenshots"
             url="#"
-            badge="NEW"
-          />
-
-          <div class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1">
-          </div>
-          <HorizontalCard
-            title="Demo Project 2"
-            img="/post_img.webp"
-            desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-            url="#"
+            badge="FOSS"
           />
 
           <div class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1">
           </div>
 
           <HorizontalCard
-            title="Demo Project 3"
-            img="/post_img.webp"
-            desc="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+            title="Prossa"
+            img="/projects/prossa.png"
+            desc="Lector de ebooks gratis y Open Source"
             url="#"
             badge="FOSS"
           />
