--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,17 +9,17 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-10 text-justify">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-    aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-    cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Hola mi nombre es Yoannis Sánchez Soto. tengo {
+      new Date().getFullYear() - 2002
+    } años, soy de Cuba, Actualmente cursando estudios de Ingeniería Informática
+    en el primer año de la carrera
   </div>
 
-  <div class="mb-5">
+  <div class="mb-5 hidden">
     <div class="text-3xl w-full font-bold">Education</div>
   </div>
 
-  <div class="time-line-container grid gap-4 mb-10">
+  <div class="time-line-container /grid gap-4 mb-10 hidden">
     <TimeLineElement
       title="Title Name"
       subtitle="[start year] to [end year] at [Study Center Name], [City], [Country]"
@@ -30,11 +30,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
   </div>
 
-  <div class="mb-5">
+  <div class="mb-5 hidden">
     <div class="text-3xl w-full font-bold">Experience</div>
   </div>
 
-  <div class="time-line-container mb-10">
+  <div class="time-line-container mb-10 hidden">
     <TimeLineElement
       title="Job Title at Project or Company Name"
       subtitle="From [Start Date] to [End Date] at [Company], [City], [Country]"
@@ -52,11 +52,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
   </div>
 
-  <div class="mb-5">
+  <div class="mb-5 hidden">
     <div class="text-3xl w-full font-bold">Certifications</div>
   </div>
 
-  <ul class="list-disc mx-6 mb-10 grid gap-2">
+  <ul class="list-disc mx-6 mb-10 /grid gap-2 hidden">
     <li>
       <a href="#" target="_blank"> Certification Name (with link)</a>
     </li>
