--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,22 +2,24 @@
     display: none;
 }
 
-::-webkit-scrollbar {
-	width: 12px;
-}
-::-webkit-scrollbar-corner {
-	background: rgba(0, 0, 0, 0);
-}
-::-webkit-scrollbar-thumb {
-	background-color: #aa9a9a15;
-	border-radius: 12px;
-	border: 4px solid rgba(0, 0, 0, 0);
-	background-clip: content-box;
-	min-width: 12px;
-	min-height: 28px;
-}
-::-webkit-scrollbar-track {
-	background-color: rgba(0, 0, 0, 0);
+@media (min-width: 1024px) {
+	::-webkit-scrollbar {
+		width: 12px;
+	}
+	::-webkit-scrollbar-corner {
+		background: rgba(0, 0, 0, 0);
+	}
+	::-webkit-scrollbar-thumb {
+		background-color: #aa9a9a15;
+		border-radius: 12px;
+		border: 4px solid rgba(0, 0, 0, 0);
+		background-clip: content-box;
+		min-width: 12px;
+		min-height: 28px;
+	}
+	::-webkit-scrollbar-track {
+		background-color: rgba(0, 0, 0, 0);
+	}
 }
 
 img {
@@ -68,7 +70,7 @@ h1 {
 	}
 }
 .gradient {
-	background-image: linear-gradient(-45deg, #f1a533, #ff7139,#eb3e3e);
+	background-image: linear-gradient(-45deg, #f1a533, #ff7139);
 	background-size: 300% 100%;
     animation: gradient-bg 5s ease-in-out infinite;
 }
