Added Support Page

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -34,7 +34,13 @@ import { Image } from "@astrojs/image/components";
       <h1 class="title my-2 text-4xl font-bold text-white">{title}</h1>
       {pubDate && <time>{displayDate}</time>}
       <br />
-      {badge && <div class="badge-primary badge my-1">{badge}</div>}
+      {
+        badge && (
+          <div class="badge-primary badge my-1 border-none gradient">
+            {badge}
+          </div>
+        )
+      }
       {
         updatedDate && (
           <div>
