--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -118,7 +118,7 @@ import { Image } from "@astrojs/image/components";
         </a>
       </div>
 
-      <div>
+      <div class="hidden">
         <a
           rel="prefetch"
           class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
@@ -180,8 +180,8 @@ import { Image } from "@astrojs/image/components";
       class="social-icons my-2 flex gap-2 self-center px-4 text-gray-400 lg:flex-col lg:gap-8 lg:px-0"
     >
       <a
-        href="https://manuelernestog.github.io/support-my-work/"
-        target="_blank"
+        href="/support"
+        rel="prefetch"
         class="mx-3 lg:mx-auto"
         aria-label="Support my work"
         title="Support my work"
