--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -179,7 +179,7 @@ import { Image } from "@astrojs/image/components";
       <div>
         <a
           class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-          href="mailto:contact.yossthedev@gmail.com"
+          href="mailto:yossthedev@gmail.com"
         >
           <svg
             xmlns="http://www.w3.org/2000/svg"
