--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -183,7 +183,7 @@ const posts = (await getCollection("blog")).sort(
             title="Karbonized"
             img="/projects/karbonized.png"
             desc="Generador de imágenes de fragmentos de codigo o screenshots"
-            url="#"
+            url="https://karbonized.onrender.com"
             badge="FOSS"
           />
 
@@ -194,7 +194,7 @@ const posts = (await getCollection("blog")).sort(
             title="Prossa"
             img="/projects/prossa.png"
             desc="Lector de ebooks gratis y Open Source"
-            url="#"
+            url="https://yossthedev.github.io/prossa"
             badge="FOSS"
           />
         </div>
