--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -13,7 +13,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       title="Karbonized"
       img="projects/karbonized.png"
       desc="Generador de imágenes de fragmentos de codigo o screenshots"
-      url="#"
+      url="https://karbonized.onrender.com"
       badge="FOSS"
     />
 
@@ -23,7 +23,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       title="Prossa"
       img="projects/prossa.png"
       desc="Lector de ebooks gratis y Open Source"
-      url="#"
+      url="https://yossthedev.github.io/prossa"
       badge="FOSS"
     />
   </div>
