Fix projects links

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,7 +11,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div class="p-2">
     <HorizontalCard
       title="Karbonized"
-      img="projects/karbonized.png"
+      img="/projects/karbonized.png"
       desc="Generador de imágenes de fragmentos de codigo o screenshots"
       url="https://karbonized.onrender.com"
       badge="FOSS"
@@ -21,7 +21,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
     <HorizontalCard
       title="Prossa"
-      img="projects/prossa.png"
+      img="/projects/prossa.png"
       desc="Lector de ebooks gratis y Open Source"
       url="https://yossthedev.github.io/prossa"
       badge="FOSS"
