Change project images directory name

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -181,7 +181,7 @@ const posts = (await getCollection("blog")).sort(
 
           <HorizontalCard
             title="Karbonized"
-            img="/projects/karbonized.png"
+            img="/projects_imgs/karbonized.png"
             desc="Generador de imágenes de fragmentos de codigo o screenshots"
             url="https://karbonized.onrender.com"
             badge="FOSS"
@@ -192,7 +192,7 @@ const posts = (await getCollection("blog")).sort(
 
           <HorizontalCard
             title="Prossa"
-            img="/projects/prossa.png"
+            img="/projects_imgs/prossa.png"
             desc="Lector de ebooks gratis y Open Source"
             url="https://yossthedev.github.io/prossa"
             badge="FOSS"
