--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,7 +12,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <HorizontalCard
       title="Karbonized"
       img="/projects_imgs/karbonized.png"
-      desc="Generador de imágenes de fragmentos de codigo o screenshots"
+      desc="Crea diseños úicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
       url="https://karbonized.onrender.com"
       badge="FOSS"
     />
@@ -22,7 +22,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <HorizontalCard
       title="Prossa"
       img="/projects_imgs/prossa.png"
-      desc="Lector de ebooks gratis y Open Source"
+      desc="LLeva tu bliblioteca contigo a cualquier lugar con Prossa, el lector de libros electrónicos web gratuito y de código abierto. Con estadísticas de lectura y una interfaz fácil de usar"
       url="https://yossthedev.github.io/prossa"
       badge="FOSS"
     />
